# tpcdata

./: .gitignore  Cargo.toml  Makefile  README.md  default.nix  samconfig.toml  shell.nix  template.yaml
src/: main.rs
test-data/: registration.json
